--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>intro-js</title>
-        <script src="1.0.js"></script>
+        <!--<script src="1.0.js"></script>
+        <script src="1.1.js"></script>-->
+        <script src="1.2.js"></script>
     </head>
 
     <body>
         
     </body>
-    
+
 </html>
