--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>intro-js</title>
         <!--<script src="1.0.js"></script>
-        <script src="1.1.js"></script>-->
+        <script src="1.1.js"></script>
         <script src="1.2.js"></script>
+        <script src="2.1.js"></script>
+        <script src="2.2.js"></script>-->
+        <script src="2.3.js"></script>
     </head>
 
     <body>
