--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>intro-js</title>
-        <!--<script src="1.0.js"></script>
-        <script src="1.1.js"></script>
-        <script src="1.2.js"></script>
-        <script src="2.1.js"></script>
-        <script src="2.2.js"></script>-->
-        <script src="2.3.js"></script>
+        <!--<script src="1.0.js"></script>-->
+        <!--<script src="1.1.js"></script>-->
+        <!--<script src="1.2.js"></script>-->
+        <!--<script src="2.1.js"></script>-->
+        <!--<script src="2.2.js"></script>-->
+        <!--<script src="2.3.js"></script>-->
+        <!--<script src="2.3.bis.js"></script>-->
+        <!--<script src="2.4.js"></script>-->
+        <!--<script src="2.5.js"></script>-->
+        <!--<script src="2.5.bis.js"></script>-->
+        <!--<script src="2.6.js"></script>-->
     </head>
 
     <body>
