--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
         <!--<script src="2.5.js"></script>-->
         <!--<script src="2.5.bis.js"></script>-->
         <!--<script src="2.6.js"></script>-->
+        <!--<script src="2.7.js"></script>-->
+        <!--<script src="3.0.js"></script>-->
+        <script src="3.1.js"></script>
     </head>
 
     <body>
