--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <!--<script src="3.1.js"></script>-->
         <!--<script src="3.2.js"></script>-->
         <!--<script src="3.3.js"></script>-->
-        <script src="3.4.js"></script>
+        <!--<script src="3.4.js"></script>-->
+        <script src="4.0.js"></script>
     </head>
 
     <body>
